--- a/won.html
+++ b/won.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="CSS/style.css">
-  <script src="JS/Chart.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js" integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8=" crossorigin="anonymous"></script>
-</head>
-<body>
-  <div class="chartContainer">
-    <a href="index.html">Home</a>
-    <canvas id="barChartCanvas"></canvas>
-  </div>
-  <script src="JS/won.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css" />
+    <script src="JS/Chart.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-1.12.0.min.js"
+      integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="chartContainer">
+      <a href="index.html">Home</a>
+      <canvas id="barChartCanvas"></canvas>
+    </div>
+    <style>
+      .chartContainer {
+        background: rgba(0, 0, 0, 0.15);
+      }
+    </style>
+    <script src="JS/won.js"></script>
+  </body>
 </html>
