--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </div>
     </div>
     <div class="img1">
-      <img src="/img/played.PNG" alt="" />
+      <img src="img/played.PNG" alt="" />
     </div>
     <div class="img2">
-      <img src="/img/won.PNG" alt="" />
+      <img src="img/won.PNG" alt="" />
     </div>
     <div class="box1"></div>
     <div class="box2"></div>
